test/langtools/tools/javac/reflect/TestNoCodeReflectionInInnerClasses.out
TestNoCodeReflectionInInnerClasses.java:12:21: compiler.err.quoted.method.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:15:48: compiler.err.quoted.lambda.inner.class: TestNoCodeReflectionInInnerClasses.Inner
TestNoCodeReflectionInInnerClasses.java:19:48: compiler.err.quoted.mref.inner.class: TestNoCodeReflectionInInnerClasses.Inner
3 errors